# InFluence

./: Dockerfile  README.md  ReadMe.txt  requirements.txt
ExampleData/: simulated_tem_image_200000.0.npy  slanted_edge.npy
Multislice and SSB Notebook/: InFluence_ver2.ipynb  README.txt  multislice_script.ipynb  my_env.yml  ssb_ssim_script.ipynb  ssbp_script.ipynb
Scripts/: InFluence.py  InFluence_fast.py  Usage_Guide.txt  common_functions.py  params.py  plot_trajectories.py  requirements.txt  save_trajectories.py
Scripts/InFluence/: ArrayMonteCarloScattering.py  CMakeLists.txt  ElectronObjectConstructor.py  HelperFunctionOptimizationTest.py  HelperFunctionOptimizationTestOutput.txt  HelperFunctions.py  ImageObjectConstructor.py  InFluenceSimulation.py  MCSS_PythonFunctions.py  MCSS_PythonFunctions_Plot.py  MCSS_PythonFunctions_Sparse.py  MonteCarloScatteringSimualtion_GPU.py  MonteCarloScatteringSimulation_CPP.py  MonteCarloScatteringSimulation_Python.py  Output.npy  PixelObjectConstructor.py  PlotTrajectoryFunctions.py  VectorizedMCSimulation.py  __init__.py  backup.py  config.ini  config_file_generator.py  filepaths.py  gputest.py  gui.py  main.py  parameters.py  plot.py  refactoring_checks.py  setup.py  test_HelperFunctions.py
Scripts/InFluence/CPP/: .h  CMakeLists.txt  MCloop.cpp  electrons_generator.h  helper_functions.cpp  influence  makefile  practice.py  temp.cpp
Scripts/InFluence/CUDA_FILE/: redundant.txt
Scripts/InFluence/InFluence.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Scripts/InFluence/MonteCarloScatteringSimulation_Python_Files/: __init__.py
Scripts/InFluence/image_preprocessing/: image_object_constructor.py  pixel_object_constructor.py
Scripts/InFluence/interface_code/: InFluence_CLI.py  gui.py  gui_user_guide.txt
Scripts/InFluence/simulation/: simulation_interface.py
Scripts/InFluence/simulation/cpp_simulation/: CMakeLists.txt  MCloop.cpp  MCloop.h  constants.cpp  constants.h  cpp_simulation_interface.py  electron_generator.cpp  electrons_generator.h  helper_functions.h  main.cpp  wrapper.cpp
Scripts/InFluence/simulation/cuda_simulation/: MCLoop.cu  cuda_kernel_wrapper.py  gpu_helpers.cu  gpu_simulation_interface.py
Scripts/InFluence/simulation/python_simulation/: electron_object_constructor.py  helper_functions.py  mcss_python_functions.py  mcss_python_functions_plot.py  mcss_python_functions_sparse.py  plot_trajectory_functions.py  python_simulation_interface.py
Scripts/LegacyInFluence/: InFluence.py  common_functions.py  params.py  plot_trajectories.py
Scripts/Tests/: ListLookupTest.py  config.ini  helper_functions.py  legacy_helper_functions.py  parameters.py  test_HelperFunctions.py
